force-app/main/default/objects/ssot__LearningAchievement__dlm/fields/ssot__AbbreviationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__AbbreviationText__c</fullName>
    <label>Abbreviation</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AbbreviationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>