force-app/main/default/objects/ssot__LearningAchievement__dlm/fields/ssot__AcademicCredentialId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicCredentialId__c</fullName>
    <label>Academic Credential</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicCredentialId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>