force-app/main/default/objects/ssot__LearningAchievement__dlm/fields/ssot__FieldOfStudy__c.field-meta.xml
<CustomField>
    <fullName>ssot__FieldOfStudy__c</fullName>
    <label>Field of Study</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FieldOfStudy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>