force-app/main/default/objects/ssot__LearningAchievement__dlm/fields/ssot__rel_1719817601404_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817601404_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningAchievement_AcademicCredenti_rel</label>
    <referenceTo>ssot__AcademicCredential__dlm</referenceTo>
    <relationshipLabel>LearningAchievement_AcademicCredenti_rel</relationshipLabel>
    <relationshipName>rel_1719817601404_end</relationshipName>
    <type>Lookup</type>
</CustomField>