force-app/main/default/objects/ssot__LearningAchievement__dlm/fields/ssot__rel_1719817714238_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817714238_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningAchievement_IssuerId_map_Acc_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>LearningAchievement_IssuerId_map_Acc_rel</relationshipLabel>
    <relationshipName>rel_1719817714238_end</relationshipName>
    <type>Lookup</type>
</CustomField>